# DIQA

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  BIQI_Implementation_Notes.md  BIQI_Proper_Implementation_Report.md  Cascade IQA Pipeline.ipynb  Cascade IQA Pipeline.py  DIQA_Pipeline.ipynb  DIQA_Pipeline.py  IQA_Comparison_Report.md  Idea.MD  MANIQA.py  Metric_Extractor.ipynb  Metric_Extractor.py  Metric_Extractor_comparable_format.py  Metric_Extractor_original_format.py  NRIQA.ipynb  PAPERS.MD  README.md  Readme.MD  Real_Implementation_Guide.md  SRS  SRS.MD  brisque.py  compare.py  compare_enhanced.py  compare_lightweight.py  enhanced_iqa_results.csv  evaluation_results.csv  example_usage.py  feature_extractor.py  feature_importance.csv  features.csv  features.py  hyperIQA.py  inference.py  iqa_lightweight_results.csv  iqa_raw_scores.csv  iqa_scorers.py  koniq10k_metric_min_max.py  large_sample_results.csv  (+33 more)
.github/workflows/: ci.yml  python-publish.yml
Data/: features.csv  iqa_raw_scores.csv  live_individual_methods_evaluation.csv  live_test_results_corrected.csv  router_training_data.csv
Scripts/: download_koniq.py  score_koniq.py
diqa/: __init__.py  features.py  inference.py  scoring.py  training.py
diqa/models/: mos_mapping_coefficients.json  router_xgb.json  scaler.pkl
koniq10k_indicators/__MACOSX/: ._koniq10k_indicators.csv
koniq10k_scores_and_distributions/__MACOSX/: ._koniq10k_scores_and_distributions.csv
pyiqa testing/: piqe.py
tests/: test_diqa.py  test_features.py  test_scoring.py
